<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   
 

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/advertisement_image"
        android:src="@drawable/advertisement" />
    
    <TextView
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="22dp"
        android:layout_marginTop="17dp"
        android:text="@string/countdown" />

	<TextView
	    android:id="@+id/tv_overtime"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/tv_countdown"
	    android:layout_alignBottom="@+id/tv_countdown"
	    android:layout_toLeftOf="@+id/tv_countdown"
	    android:text="@string/over_time" />

</RelativeLayout>