<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@drawable/loginbackground"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />

        <EditText
            android:id="@+id/etUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/users"
            android:hint="@string/user_hint"
            android:ems="13" />

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/pwd"
            android:hint="@string/pwd_hint"
            android:ems="13"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_save"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/rememberpwd" />

            <TextView
                android:id="@+id/tv_forgetpwd"
                android:clickable="true"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="@string/forgetpwd" />

        </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >


            <ImageButton
                android:id="@+id/imageBtnRegister"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="42dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/register_hdpi"
                android:contentDescription="@string/register_btn"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/imageBtnLogin"
                android:layout_width="0dp"
                android:layout_weight="6"
                android:layout_height="42dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/login_hdpi"
                android:contentDescription="@string/login_btn"
                android:scaleType="centerCrop" />
    </LinearLayout>

   

</LinearLayout>